--- a/MSE_446_Project_Report.ipynb
+++ b/MSE_446_Project_Report.ipynb
@@ -47,7 +47,7 @@
         "id": "AIm288F3Ax0H"
       },
       "source": [
-        "### Datasets\n",
+        "### Datasets and Data Preprocessing\n",
         "In machine learning, data is the most critical element that drives the model's performance. The quality, quantity, and structure of data often determine the upper bound of a model's effectiveness, making data processing a critical step in any ML method. Also, proper preprocessing, including cleaning and formatting, ensures that models can extract meaningful patterns while minimizing noise created by low-quality data. As such, we believe that proper data handling is just as essential as selecting the right algorithms or architectures."
       ]
     },
