--- a/MSE_446_Project_Report.ipynb
+++ b/MSE_446_Project_Report.ipynb
@@ -94,26 +94,26 @@
       "source": [
         "#### Lightning Occurence\n",
         "\n",
-        "We obtained the total lighting occurrences of 15 different cities in Alberta from 1999-2018, according to the Government of Canada. Lightning caused almost 50% of the total wildfires around Canada, and thus it would be necessary to include lightning as a feature of the model when we’re predicting the probability of fire. However, since we only have the total number of lightning strikes of a city over ~20 years, and our previous datasets all have specific spatial features in longitude and latitude, we assigned a “lightning index” to every spatial coordinate in the dataset to incorporate the idea of the probability of getting lightning strikes at that place: \n",
+        "We obtained the total lighting occurrences of 15 different cities in Alberta from 1999-2018, according to the Government of Canada. Lightning caused almost 47% of the total wildfires around Alberta in 2024, and thus it would be necessary to include lightning as a feature of the model when we’re predicting the probability of fire. However, since we only have the total number of lightning strikes of a city over ~20 years, and our previous datasets all have specific spatial features in longitude and latitude, we assigned a “lightning index” to every spatial coordinate in the dataset to incorporate the idea of the probability of getting lightning strikes at that place: \n",
         "\n",
-        "given a coordinate in the dataset, we first calculate the distance between the location and all 15 cities, \n",
-        "\n",
-        "$$\n",
-        "R_1, R_2, \\dots, R_{15},\n",
-        "$$\n",
-        "\n",
-        "\n",
-        "then, given the number of total lightning strikes in the 15 cities, \n",
+        "given a coordinate in the dataset, we first calculate the distance between the location and the 5 closest cities around it, \n",
         "\n",
         "$$\n",
-        "a_1, a_2, \\dots, a_{15},\n",
+        "R_1, R_2, \\dots, R_{5},\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "then, given the number of total lightning strikes in the 5 cities, \n",
+        "\n",
+        "$$\n",
+        "a_1, a_2, \\dots, a_{5},\n",
         "$$\n",
         "\n",
         "\n",
         "we use that number and divide by the square of the distance calculated before, and we add them together to obtain the “lightning index” of any location. In this way, we approximated the probability of getting lightning strikes at any location in Alberta.\n",
         "\n",
         "$$\n",
-        "\\frac{a_1}{R_1^2}, \\frac{a_2}{R_2^2}, \\dots, \\frac{a_{15}}{R_{15}^2}\n",
+        "\\frac{a_1}{R_1^2}, \\frac{a_2}{R_2^2}, \\dots, \\frac{a_{5}}{R_{5}^2}\n",
         "$$"
       ]
     },
@@ -122,7 +122,8 @@
       "metadata": {},
       "source": [
         "#### Population Density\n",
-        "\n"
+        "\n",
+        "The last dataset we obtained is the population density dataset. According to the Government of Alberta, 50% of total wildfires were human-caused in 2024, we noticed there’s a strong correlation between human activities and wildfires, and thus we believe population density of a place also plays an important role in creating wildfires. As a result, we obtained the population density of a total of 119 places in 2021, and we filtered out the following 3 specs: {population density per square kilometre, total private dwellings, geographic area type}. For any given location in the previous dataset, we find the 1 out of 119 places that is closest to the location and append its 3 features to that location."
       ]
     },
     {
