Update Introduction and PS, Reference

--- a/MSE_446_Project_Report.ipynb
+++ b/MSE_446_Project_Report.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# MSE 446 Project Report\n",
         "Group 19  \n",
-        "Lucy He, Alex Li, Jason Liu, Carrick Shi\n"
+        "Lucy He, Junshi Li, Jason Liu, Carrick Shi\n"
       ]
     },
     {
@@ -18,18 +18,18 @@
       },
       "source": [
         "## Introduction and Problem Statement\n",
-        "Recent catastrophic wildfires highlight the growing threat of natural disasters. In July 2018, a wildfire ignited in Greece and rapidly spread across the region [1]. As of September 2020, wildfires in California had burned over 1.5 million hectares, affecting approximately 3.7% of the state's total area [2]. In January 2025, Los Angeles faced unprecedented winter wildfires, causing 29 fatalities and destroying over 16,000 structures [1]. In 2023, Alberta had 36 severe fires burning 2.2 million hectares—far exceeding the five-year average of 169,556 hectares [2]. These events emphasize the urgent need for accurate wildfire prediction models to mitigate future risks. \n",
+        "Recent catastrophic wildfires highlight the growing threat of natural disasters. In July 2018, a wildfire ignited in Greece and rapidly spread across the region [1]. As of September 2020, wildfires in California had burned over 1.5 million hectares, affecting approximately 3.7% of the state's total area [2]. In January 2025, Los Angeles faced unprecedented winter wildfires, causing 29 fatalities and destroying over 16,000 structures [3]. In 2023, Alberta had 36 severe fires burning 2.2 million hectares—far exceeding the five-year average of 169,556 hectares [4]. These events emphasize the urgent need for accurate wildfire prediction models to mitigate future risks. \n",
         "  \n",
-        "Wildfires have significant impacts on social structures, disrupt wildlife activities, and pose substantial economic challenges to cities. Consequently, the development of accurate and effective wildfire prediction methods is essential for mitigating these adverse effects. The goal of this project is to predict wildfire occurrence probabilities based on environmental factors such as temperature, humidity, wind speed, and weather conditions. According to Natural Resources Canada, Alberta has the highest Fire Weather Index (FWI) values in Canada due to frequent summer wildfires, large forested areas, and dry climate conditions. Given Alberta's high fire activity, we focus our wildfire prediction problem on this region to develop targeted mitigation strategies. In this project, three Machine Learning models are proposed, developed, and evaluated, including Logistic Regression, Decision Tree, and Fully Connected Neural Network, aimed at predicting wildfire occurrences and facilitating early intervention to prevent their spread. Using k-fold cross-validation, These models will be evaluated based on a fraction of correct predictions and root mean square (RMS) error metrics to assess their effectiveness for wildfire forecasting. \n",
+        "Wildfires have significant impacts on social structures, disrupt wildlife activities, and pose substantial economic challenges to cities. Consequently, the development of accurate and effective wildfire prediction methods is essential for mitigating these adverse effects. The goal of this project is to predict wildfire occurrence probabilities based on environmental factors such as temperature, humidity, wind and rainfall. According to Natural Resources Canada, Alberta has the highest Fire Weather Index (FWI) values in Canada due to frequent summer wildfires, large forested areas, and dry climate conditions. Given Alberta's high wildfire activity, this study focuses on the region to develop targeted mitigation strategies. In this project, three Machine Learning models are proposed, developed, and evaluated, including Logistic Regression, Decision Tree, and Fully Connected Neural Network, aimed at predicting wildfire occurrences and facilitating early intervention to prevent their spread. Using k-fold cross-validation, these models will be evaluated based on a fraction of correct predictions and root mean square (RMS) error metrics to assess their effectiveness for wildfire forecasting. \n",
         "\n",
         "#### Research on Wildfire Prediction\n",
         "\n",
-        "There has been ongoing research about wildfire predictions, and we observed a lot of interesting work, for example, we noticed that Sanabria et al. (2013)’s interpolation-based study of fire danger indices across Australia. \n",
+        "There has been ongoing research about wildfire predictions, and we observed a lot of excellent work; for example, we noticed Sanabria et al.’s interpolation-based study of fire danger indices across Australia [5]. Our approach and the work by Sanabria et al.. aim to improve the understanding of wildfire risk through historical weather conditions. Essentially, both approaches used data such as temperature, humidity, wind speed, rainfall, and vegetation conditions to assess fire danger at various locations during the year. This foundation highlights a shared objective of extracting environmental patterns as fire risk indicators.\n",
         "\n",
-        "Both our approach and the work by Sanabria et al. (2013) aim to improve the understanding of wildfire risk through historical weather conditions. Essentially, both approaches used data such as temperature, humidity, wind speed, rainfall, and vegetation conditions to assess fire danger at various locations at some time in the year. This foundation highlights a shared objective of extracting environmental patterns as fire risk indicators\n",
+        "Another research is written by Shadrin et al., they utilized a neural network algorithm based on the MA-Net architecture for predicting fire spread up to 5 days in advance [6]. The model achieved an F1-score of 0.67 during testing over three days [6], indicating a reasonable level of accuracy for fire prediction.\n",
         "\n",
-        "Sanabria et al. focused on predicting the spatial distribution of McArthur’s Forest Fire Danger Index (FFDI) return periods across Australia using data from weather stations. Similarly, we used a comparable set of weather features, but instead applied them to predict fire occurrence across Alberta, Canada. \n",
-        "also, Sanabria et al. implemented interpolation and statistical methods such as Inverse Distance Weighting (IDW), Ordinary Kriging (OK), and Random Forest (RF) to predict fire index. while our study used supervised machine learning models, including logistic regression, decision trees, and fully connected neural networks. Despite the methodological differences, both studies leveraged traditional and modern data-driven techniques to capture spatial fire risk patterns.\n"
+        "G. Bayat and K. Yıldız proved that the use of multiple models allows for a comprehensive analysis of prediction capabilities [7]. The article introduced models such as Multilayer Perceptron (MLP), Linear Regression, Support Vector Machine (SVM), K-Nearest Neighbors (KNN), Decision Tree, and Stacking methods. It concludes that the SVM model achieved the best predictive ability with a Mean Absolute Error (MAE) of 12.8879. MLP had the worst performance with an MAE of 38.7481, indicating lower accuracy [7].\n",
+        "\n"
       ]
     },
     {
@@ -248,7 +248,17 @@
         "\n",
         "[1] Lagouvardos, K., Kotroni, V., Giannaros, T. M. & Dafis, S. Meteorological Conditions Conducive to the Rapid Spread of the Deadly Wildfire in Eastern Attica, Greece. Bull. Am. Meteorological Soc. 100, 2137–2145 (2019). Publisher: American Meteorological Society Section: Bulletin of the American Meteorological Society.\n",
         "\n",
-        "[2] Higuera, P. E. & Abatzoglou, J. T. Record-setting climate enabled the extraordinary 2020 fire season in the western United States. Glob. Change Biol. 27, 1–2 (2021).\n"
+        "[2] Higuera, P. E. & Abatzoglou, J. T. Record-setting climate enabled the extraordinary 2020 fire season in the western United States. Glob. Change Biol. 27, 1–2 (2021).\n",
+        "\n",
+        "[3] A. School, “Economic Impact of the Los Angeles Wildfires,” UCLA Anderson School of Management, Jan. 31, 2025. https://www.anderson.ucla.edu/about/centers/ucla-anderson-forecast/economic-impact-los-angeles-wildfires\n",
+        "\n",
+        "[4] Government of Alberta, “2023 Alberta Wildfire’s seasonal statistics,” Dec. 2023.\n",
+        "\n",
+        "[5] Sanabria L.A., Qin X., Li J., Cechet R.P., and Lucas C. 2013. Spatial interpolation of McArthur’s Forest Fire Danger Index across Australia: observational study. Environ. Model. Softw. 50: 37–50.\n",
+        "\n",
+        "[6] Shadrin, D., Illarionova, S., Gubanov, F. et al. Wildfire spreading prediction using multimodal data and deep neural network approach. Sci Rep 14, 2606 (2024). https://doi.org/10.1038/s41598-024-52821-x\n",
+        "\n",
+        "[7] G. Bayat and K. Yıldız, “Comparison of the Machine Learning Methods to Predict Wildfire Areas”, TJST, vol. 17, no. 2, pp. 241–250, 2022, doi: 10.55525/tjst.1063284."
       ]
     }
   ],
