update lightning index markdown

--- a/MSE_446_Project_Report.ipynb
+++ b/MSE_446_Project_Report.ipynb
@@ -1189,7 +1189,7 @@
         "we use that number and divide by the square of the distance calculated before, and we add them together to obtain the “lightning index” of any location. In this way, we approximated the probability of getting lightning strikes at any location in Alberta.\n",
         "\n",
         "$$\n",
-        "\\frac{a_1}{R_1^2}, \\frac{a_2}{R_2^2}, \\dots, \\frac{a_{5}}{R_{5}^2}\n",
+        "index_{lightning} = \\frac{a_1}{R_1^2}+ \\frac{a_2}{R_2^2}+ \\dots \\frac{a_{5}}{R_{5}^2}\n",
         "$$"
       ]
     },
